// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`allScoredKeepDiscardsByScoreDescending five card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 5.74468085106383,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 5.36170212765957,
    "handPoints": 3,
    "keep": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 3.8936170212766,
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 3.8936170212766,
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 3.63829787234043,
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 3.63829787234043,
    "handPoints": 2,
    "keep": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 1.48936170212766,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 1.48936170212766,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 1.46808510638298,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 1.46808510638298,
    "handPoints": 0,
    "keep": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending four card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 3,
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 1.16666666666667,
    "handPoints": 0,
    "keep": [
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 1,
    "handPoints": 0,
    "keep": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 0.79166666666667,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0.54166666666667,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0.54166666666667,
    "handPoints": 0,
    "keep": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
    ],
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending six card descending rank order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 11.41304347826087,
    "handPoints": 9,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 9.97826086956522,
    "handPoints": 7,
    "keep": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 9.71739130434783,
    "handPoints": 7,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 9.71739130434783,
    "handPoints": 7,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 7,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 6.82608695652174,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 6.73913043478261,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 6.56521739130435,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 6.47826086956522,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 6.30434782608696,
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 5.3695652173913,
    "handPoints": 3,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 5.02173913043478,
    "handPoints": 3,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 2.34782608695652,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 2.08695652173913,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 1.82608695652174,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending three card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 0.73469387755102,
    "handPoints": 0,
    "keep": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 0.24489795918367,
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0.12244897959184,
    "handPoints": 0,
    "keep": [
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending two card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0,
    "handPoints": 0,
    "keep": [],
  },
]
`;
